K8S/postgres/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
spec:
  rules:
  - host: markwantsapi.fvds.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-svc
            port:
              number: 5432
